// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`场景 1 · 启动（空态） **新会话，不接续**——空手打开没有会话，状态行报「新会话」 1`] = `
"
  █   █  ███   ████ ███  ████    ████  ███  ████  █████
  ██ ██ █   █ █      █  █       █     █   █ █   █ █
  █ █ █ █████ █ ███  █  █       █     █   █ █   █ ████
  █   █ █   █ █   █  █  █       █     █   █ █   █ █
  █   █ █   █  ███  ███  ████    ████  ███  ████  █████

────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 › 交代一件事，回车发送
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ○ 空闲 · 新会话                                                                                                                                                                   / 命令 · ctrl+c 退出"
`;

exports[`场景 2 · 空闲（有历史） 三类行各就其位 ＋ 状态行四格 1`] = `
"
  █   █  ███   ████ ███  ████    ████  ███  ████  █████
  ██ ██ █   █ █      █  █       █     █   █ █   █ █
  █ █ █ █████ █ ███  █  █       █     █   █ █   █ ████
  █   █ █   █ █   █  █  █       █     █   █ █   █ █
  █   █ █   █  ███  ███  ████    ████  ███  ████  █████

› 看看这个工作区里有什么

我先列一下。

  ▸ ✓ ls(.)
  200ms · 14 项

是个 Bun 工作区，packages 下六个包。
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
提交中：看看这个工作区里有什么
 › 交代一件事，回车发送
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ○ 空闲 · 记录查询优化 · 3.1k                                                                                                                                                      / 命令 · ctrl+c 退出"
`;

exports[`场景 3 · 工作中（流式） 工具在跑——头一行 \`▸ 名(参数)\` ＋ 行尾那一位；**没有钟就不画那条读数**（不编秒数）；输入行说实话；右位报「停或离开」 1`] = `
"
  █   █  ███   ████ ███  ████    ████  ███  ████  █████
  ██ ██ █   █ █      █  █       █     █   █ █   █ █
  █ █ █ █████ █ ███  █  █       █     █   █ █   █ ████
  █   █ █   █ █   █  █  █       █     █   █ █   █ █
  █   █ █   █  ███  ███  ████    ████  ███  ████  █████

› 把 src/utils/date.ts 的时区处理改成本地时区

先读一遍，看清它现在怎么算的——

  ▸ ● read(src/utils/date.ts)
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
提交中：把 src/utils/date.ts 的时区处理改成本地时区
 ›
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ● 工作中 · 时区修正                                                                                                                                                         Esc 停止 · ctrl+c 停或离开"
`;

exports[`场景 4 · 待裁决（轻） 黄线 ＋ 材料内联 ＋ 三键（含 \`a\`）；接管态**不画输入行**（D29） 1`] = `
"
  █   █  ███   ████ ███  ████    ████  ███  ████  █████
  ██ ██ █   █ █      █  █       █     █   █ █   █ █
  █ █ █ █████ █ ███  █  █       █     █   █ █   █ ████
  █   █ █   █ █   █  █  █       █     █   █ █   █ █
  █   █ █   █  ███  ███  ████    ████  ███  ████  █████

› 跑一下测试看看现在什么情况

要跑 bun test——这条命令没配过规则，请一下。
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
提交中：跑一下测试看看现在什么情况
 │ exec · 待决策 · 1/1
 │ 此操作尚未获得授权。
 │ 命令 bun test · 只读（不写工作区）
 │ ○ 批准这一次
 │ ○ 本工作区总是允许此类操作
 │ ○ 拒绝这一次
 │ ↑↓ 选择 · Enter 确认 · PgUp/PgDn 查看材料 · Esc 返回
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ◊ 等你定夺 1/1 · 记录查询优化                                                                                                                                          ↑↓ 选择 · Enter 确认 · Esc 返回"
`;

exports[`场景 5 · 待裁决（重） 红线 ＋ **\`a\` 划掉**（不是藏起来）；右位只剩 \`↑↓ 选择 · Enter 确认 · Esc 返回\` 1`] = `
"
  █   █  ███   ████ ███  ████    ████  ███  ████  █████
  ██ ██ █   █ █      █  █       █     █   █ █   █ █
  █ █ █ █████ █ ███  █  █       █     █   █ █   █ ████
  █   █ █   █ █   █  █  █       █     █   █ █   █ █
  █   █ █   █  ███  ███  ████    ████  ███  ████  █████

› 把 user_version 抬到 1，旧库的迁移也补上
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
提交中：把 user_version 抬到 1，旧库的迁移也补上
 │ write · 待决策 · 1/1
 │ 此操作需要你明确授权。
 │ 目标 src/records/db.ts · 影响面 覆盖已有文件（132 行将变）
 │ - const v = 0
 │ + const v = 1
 │ ○ 批准这一次
 │ ○ 拒绝这一次
 │ ↑↓ 选择 · Enter 确认 · PgUp/PgDn 查看材料 · Esc 返回
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ◊ 等你定夺 1/1 · 时区修正                                                                                                                                              ↑↓ 选择 · Enter 确认 · Esc 返回"
`;

exports[`场景 6 · 接管 · 按了非答复键 忽略但**当场说一句**（\`▲ …\`）；其余照旧 1`] = `
"
  █   █  ███   ████ ███  ████    ████  ███  ████  █████
  ██ ██ █   █ █      █  █       █     █   █ █   █ █
  █ █ █ █████ █ ███  █  █       █     █   █ █   █ ████
  █   █ █   █ █   █  █  █       █     █   █ █   █ █
  █   █ █   █  ███  ███  ████    ████  ███  ████  █████

────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 │ write · 待决策 · 1/1
 │ 此操作需要你明确授权。
 │ 覆盖 src/records/db.ts
 │ ○ 批准这一次
 │ ○ 拒绝这一次
 │ ↑↓ 选择 · Enter 确认 · PgUp/PgDn 查看材料 · Esc 返回
▲ 先答复——「x」此刻不管用（这一轮在等你）。草稿在，答完接着打。
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ◊ 等你定夺 1/1 · 记录查询优化                                                                                                                                          ↑↓ 选择 · Enter 确认 · Esc 返回"
`;

exports[`场景 7 · 多件裁决 件数报**两处**：卡的标题 \`2 / 3\` 与状态行 \`2/3\` 1`] = `
"
  █   █  ███   ████ ███  ████    ████  ███  ████  █████
  ██ ██ █   █ █      █  █       █     █   █ █   █ █
  █ █ █ █████ █ ███  █  █       █     █   █ █   █ ████
  █   █ █   █ █   █  █  █       █     █   █ █   █ █
  █   █ █   █  ███  ███  ████    ████  ███  ████  █████

  ▸ ● write(a)
  ▸ ● write(b)
  ▸ ● write(c)
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 │ write · 待决策 · 1/1
 │ 此操作尚未获得授权。
 │ 目标 README.md · 影响面 覆盖（新增 12 行）
 │ ○ 批准这一次
 │ ○ 本工作区总是允许此类操作
 │ ○ 拒绝这一次
 │ ↑↓ 选择 · Enter 确认 · PgUp/PgDn 查看材料 · Esc 返回
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ◊ 等你定夺 1/1 · 时区修正                                                                                                                                              ↑↓ 选择 · Enter 确认 · Esc 返回"
`;

exports[`场景 8 · 答完之后 回执一行 · 下一件接上 · 草稿归还（不自动发送） 1`] = `
"
  █   █  ███   ████ ███  ████    ████  ███  ████  █████
  ██ ██ █   █ █      █  █       █     █   █ █   █ █
  █ █ █ █████ █ ███  █  █       █     █   █ █   █ ████
  █   █ █   █ █   █  █  █       █     █   █ █   █ █
  █   █ █   █  ███  ███  ████    ████  ███  ████  █████

  ▸ ✓ write(src/records/db.ts)
  181ms · 写好了
  ▸ ● write(README.md)
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 │ write · 待决策 · 1/1
 │ 此操作尚未获得授权。
 │ 目标 README.md
 │ ○ 批准这一次
 │ ○ 本工作区总是允许此类操作
 │ ○ 拒绝这一次
 │ ↑↓ 选择 · Enter 确认 · PgUp/PgDn 查看材料 · Esc 返回
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ◊ 等你定夺 1/1 · 时区修正                                                                                                                                              ↑↓ 选择 · Enter 确认 · Esc 返回"
`;

exports[`场景 9 · \`/resume\`（交互配置型） 回车**不进记录区**，只在左下开选择器；列表带当前位与说明 1`] = `
"
  █   █  ███   ████ ███  ████    ████  ███  ████  █████
  ██ ██ █   █ █      █  █       █     █   █ █   █ █
  █ █ █ █████ █ ███  █  █       █     █   █ █   █ ████
  █   █ █   █ █   █  █  █       █     █   █ █   █ █
  █   █ █   █  ███  ███  ████    ████  ███  ████  █████

› /resume
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 找工作并接回
 （工作区未记录）
 ›  记录查询优化　正在用
    工作区：未记录
    最近交代：未记录
    进展：未记录
    修复时区处理…
    给 CI 加缓存
    范围：全部工作 · 筛词：无
    ↑↓ 选择 · Enter 接回 · 打字筛选 · Tab 换范围 · Esc 返回
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ○ 空闲 · 记录查询优化"
`;

exports[`场景 10 · \`/model\`（同一处、同一开合） 列表报条目与模型名（**全量**）；开选择器本身**不进记录区** 1`] = `
"
  █   █  ███   ████ ███  ████    ████  ███  ████  █████
  ██ ██ █   █ █      █  █       █     █   █ █   █ █
  █ █ █ █████ █ ███  █  █       █     █   █ █   █ ████
  █   █ █   █ █   █  █  █       █     █   █ █   █ █
  █   █ █   █  ███  ███  ████    ████  ███  ████  █████

› /model
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ›  MiniMax-M3　minimax
    MiniMax-M2　minimax-m2
    连接供应商
    管理连接　2 条连接
    刷新模型　现在就去供应商那儿取一遍
    使用此模型开始：设为默认，并先用于尚未配置的三个能力档位，之后可分别调整
    ↑↓ 选择 · Enter 选定 · ← / Esc 返回
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ○ 空闲 · 修复时区处理…"
`;

exports[`场景 11 · \`/help\`（纯输出型） 输出进记录区（dim 块）；**命令本身不回显** 1`] = `
"
  █   █  ███   ████ ███  ████    ████  ███  ████  █████
  ██ ██ █   █ █      █  █       █     █   █ █   █ █
  █ █ █ █████ █ ███  █  █       █     █   █ █   █ ████
  █   █ █   █ █   █  █  █       █     █   █ █   █ █
  █   █ █   █  ███  ███  ████    ████  ███  ████  █████

  已选择 Default

› /help
使用帮助
输入任务描述开始工作；/ 查找命令，@ 引用文件。
命令：
  /connect  重连当前会话并刷新，保留草稿
  /clear    新建会话并清屏，保留历史记录
  /resume   查看记录或接回工作
  /rename   修改当前会话名称
  /exit     停止当前工作并退出界面
  /status   查看会话、模型、用量与调用状态
  /config   调整终端、模型、授权与工具设置
  /model    选择工作模型与思考等级
  /grants   查看或撤销工作区授权
  /skills   浏览或搜索技能，选定后加入草稿
  /mcp      查看外部工具服务器和工具
  /help     显示帮助
参数用法：
  /rename <名称> · /skills [关键词]
  /model connect              接入模型连接
  /model manage               管理连接与档位
  /model refresh [连接]       刷新模型列表
  /mcp [服务器]               查看服务器详情
  /mcp reconnect <服务器>     重连服务器
快捷键：
  Enter                发送
  Shift+Enter          换行
  Tab                  补全
  ↑ / ↓                选择候选
  Esc                  临时层返回；主输入运行中停止，保留草稿
  Ctrl+R / /connect    重连当前会话并刷新
  待决策面板           ↑↓ 选择，Enter 确认；返回输入后 Tab 再进入
  Ctrl+P / Ctrl+N      召回上一条 / 下一条输入
  Ctrl+O               查看记录
  Ctrl+T               展开或收起计划
  Alt+Enter            选择本条输入用途
Ctrl+C：工作中或有待答时选择停止、转后台或退出。
空闲时 1 秒内连按两次 Ctrl+C 退出界面，App 继续运行。
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 › 交代一件事，回车发送
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ○ 空闲 · 时区修正                                                                                                                                                                 / 命令 · ctrl+c 退出"
`;

exports[`场景 12 · 切换 / 恢复后——重建，且是收拢的 条目重建出记录区；工具两条并一行；屏上痕迹不回 1`] = `
"
  █   █  ███   ████ ███  ████    ████  ███  ████  █████
  ██ ██ █   █ █      █  █       █     █   █ █   █ █
  █ █ █ █████ █ ███  █  █       █     █   █ █   █ ████
  █   █ █   █ █   █  █  █       █     █   █ █   █ █
  █   █ █   █  ███  ███  ████    ████  ███  ████  █████

› 看看这个工作区里有什么

我先列一下。

  ▸ ✓ ls(.)
  14 项

是个 Bun 工作区，packages 下六个包。
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 › 交代一件事，回车发送
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ○ 空闲 · 时区修正                                                                                                                                                                 / 命令 · ctrl+c 退出"
`;

exports[`场景 13 · 退避重试 状态词换 \`● 正在重试 2/3\`，右位报「几秒后重发」；输入行说实话 1`] = `
"
  █   █  ███   ████ ███  ████    ████  ███  ████  █████
  ██ ██ █   █ █      █  █       █     █   █ █   █ █
  █ █ █ █████ █ ███  █  █       █     █   █ █   █ ████
  █   █ █   █ █   █  █  █       █     █   █ █   █ █
  █   █ █   █  ███  ███  ████    ████  ███  ████  █████

────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ›
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ● 正在重试 2/3 · 时区修正                                                                                                                                                         1.6s 后重发 · 不用管"
`;

exports[`规格细节（渲染层） **收拢**：更早的组并成一行摘要，**末尾五组**逐条展开（原型 · 场景 12 ＋ 缺陷 D18） 1`] = `
"
  █   █  ███   ████ ███  ████    ████  ███  ████  █████
  ██ ██ █   █ █      █  █       █     █   █ █   █ █
  █ █ █ █████ █ ███  █  █       █     █   █ █   █ ████
  █   █ █   █ █   █  █  █       █     █   █ █   █ █
  █   █ █   █  ███  ███  ████    ████  ███  ████  █████

› 看看有什么

  3 次工具调用（ls · read · grep）

看完了。

  2 次工具调用（write · edit）

改完了。

  ▸ ✓ ls
  1 项

再看。

  ▸ ✓ ls
  1 项

继续。

  ▸ ✓ ls
  1 项

继续。

  ▸ ✓ ls
  1 项

继续。

  ▸ ✓ cat
  成

完了。
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 › 交代一件事，回车发送
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ○ 空闲 · 时区修正                                                                                                                                                                 / 命令 · ctrl+c 退出"
`;

exports[`场景 11 · slash 自动补全 打 \`/s\` —— 候选列在输入行**上方**，前缀命中（\`/skills\` · \`/status\`）在前 1`] = `
"
  █   █  ███   ████ ███  ████    ████  ███  ████  █████
  ██ ██ █   █ █      █  █       █     █   █ █   █ █
  █ █ █ █████ █ ███  █  █       █     █   █ █   █ ████
  █   █ █   █ █   █  █  █       █     █   █ █   █ █
  █   █ █   █  ███  ███  ████    ████  ███  ████  █████

────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
› /skills　浏览或搜索技能，选定后加入草稿
  /status　查看会话、模型、用量与调用状态
  /grants　查看或撤销工作区授权
  /resume　查看记录或接回工作
 › /s
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ○ 空闲 · 记录查询优化                                                                                                                                                      ↑↓ 选 · Tab 补全 · esc 收起"
`;
